<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation_layer.crypto_currency.CryptoCurrencyActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/logo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/title_exchange"
                    android:textColor="@color/bottom_nav_bg"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_notification"
                    app:layout_constraintEnd_toStartOf="@+id/icon_notification"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/icon_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/icon_settings"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toEndOf="@+id/logo"
                    app:srcCompat="@drawable/icon_notification" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_badge_circle"
                    app:layout_constraintEnd_toEndOf="@id/icon_notification"
                    app:layout_constraintTop_toTopOf="@id/icon_notification" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/icon_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/icon_notification"
                    app:srcCompat="@drawable/icon_settings" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewImages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_search_rectangle"
            android:gravity="center_vertical|left"
            android:layoutDirection="rtl"
            android:outlineProvider="bounds"
            android:theme="@style/App.Custom.SearchView"
            app:defaultQueryHint="@string/hint_search_cryptocurrency"
            app:iconifiedByDefault="false"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintWidth_percent="0.58"
            app:queryBackground="@null"
            app:searchIcon="@drawable/icon_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilter"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_filter"
            android:text="Filter"
            android:textColor="@color/off_white3"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/searchViewImages"
            app:layout_constraintRight_toRightOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/searchViewImages"
            app:layout_constraintWidth_percent="0.3"
            app:strokeColor="@color/off_white3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_cryptoCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|start"
            android:padding="10dp"
            android:text="Cryptocurrency"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/searchViewImages" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_NFT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|start"
            android:padding="10dp"
            android:text="NFT"
            android:textColor="@color/off_white3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/title_cryptoCurrency"
            app:layout_constraintLeft_toRightOf="@id/title_cryptoCurrency"
            app:layout_constraintTop_toTopOf="@+id/title_cryptoCurrency" />

        <androidx.cardview.widget.CardView
            android:id="@+id/carousalCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/light_green"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/title_cryptoCurrency">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="131dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgBitcoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/imgMask"
                    app:layout_constraintEnd_toStartOf="@+id/imgBitcoinValue"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_bitcoin" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgBitcoinValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    app:layout_constraintBottom_toTopOf="@+id/imgMask"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imgBitcoin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_bitcoin_value" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgMask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/icon_maskable" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleCrypto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical|start"
            android:padding="10dp"
            android:text="@string/str_top_cyrptocurrencies"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtViewAll"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/carousalCardView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtViewAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:padding="10dp"
            android:text="@string/str_view_all"
            android:textColor="@color/off_white3"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/titleCrypto"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/titleCrypto" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCryptoCurrency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/fl_bottom_nav"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/titleCrypto" />


        <FrameLayout
            android:id="@+id/fl_bottom_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/shape_rectangle"
                app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
                app:itemIconTint="@color/bottom_nav_item_selector"
                app:itemTextColor="@color/bottom_nav_item_selector"
                app:labelVisibilityMode="labeled"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:menu="@menu/bottom_nav_menu" />

        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_metaverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/icon_metaverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:indicatorSize="60dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/bottom_nav_bg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>